# license_manager

./: pyproject.toml
src/license_manager/: __main__.py  license_manager.py  style.tcss
src/license_manager/modals/: license_form.py
src/license_manager/utils/: app_context.py
src/license_manager/widgets/: license_table.py  signing_authority.py
